<resources>
    <string name="jdbc_host">jdbc:mysql://192.168.1.156:3306/parkydb</string>
    <string name="jdbc_ip">192.168.1.156</string>
    <string name="jdbc_usr">parky</string>
    <string name="jdbc_pass">password</string>


    <string name="app_name">Parky</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_choose_location">ChooseLocationActivity</string>
    <string name="title_activity_splash_screen">Parky</string>
    <string name="title_activity_location_view">LocationViewActivity</string>
    <string name="title_activity_view_sql">ViewSQL</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="TOS">I Accept to Terms and Conditions</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="str_lgn_parky">Login with your Parky Account</string>
    <string name="tv_gnup">Sign Up</string>
    <string name="Male">Male</string>
    <string name="Female">Female     </string>
    <string name="cyl">Choose Your Location</string>
    <string name="loca_name"></string>
    <string name="free_sp"></string>
    <string name="addres"></string>
    <string name="loc_adress"></string>

</resources>
