<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"

    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignUp"
    android:background="#19a7ca"
    android:touchscreenBlocksFocus="false"
    android:padding="0dp">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/logo"
        android:src="@drawable/parky"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:cropToPadding="false"
        android:contentDescription="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_gnup"
        android:id="@+id/tv_sgnup"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="18sp" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:background="#fff"
        android:paddingTop="15dp"
        android:padding="15dp"
        android:breakStrategy="simple"
        android:hint="@string/Name"
        android:layout_below="@+id/tv_sgnup"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignStart="@+id/logo"
        android:singleLine="false" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:background="#fff"
        android:paddingTop="15dp"
        android:padding="15dp"
        android:breakStrategy="simple"
        android:hint="@string/Email"
        android:layout_alignParentStart="true"
        android:inputType="textEmailAddress"
        android:layout_alignLeft="@+id/logo"
        android:layout_below="@+id/name" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="10"
        android:id="@+id/ph_no"
        android:visibility="visible"
        android:padding="15dp"
        android:background="#fff"
        android:hint="@string/Mobile_Number"
        android:layout_alignLeft="@+id/pwd"
        android:layout_alignStart="@+id/pwd"
        android:layout_below="@+id/email"
        android:inputType="phone"
        android:numeric="integer" />

    <RadioGroup

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ph_no"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rb_mf"
        android:minHeight="60sp"
        android:weightSum="1"
        android:gravity="left"
        android:background="#fff">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Male"
            android:id="@+id/rb_male"
            android:checked="false"
            android:textColor="#868686"
            android:textSize="18sp"
            android:paddingTop="0dp"
            android:paddingLeft="0dp"
            android:focusableInTouchMode="true"
            android:layout_marginRight="52dp"
            android:layout_marginLeft="90dp"
            android:textColorHighlight="#000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Female"
            android:id="@+id/rb_fmale"
            android:checked="false"
            android:textColor="#868686"
            android:textSize="18sp"
            android:focusableInTouchMode="true"
            android:layout_marginRight="15dp"
            android:textColorHighlight="#000" />

    </RadioGroup>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pwd"
        android:visibility="visible"
        android:padding="15dp"
        android:background="#fff"
        android:hint="@string/Password"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/ph_no"
        android:layout_alignLeft="@+id/logo" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/TOS"
        android:id="@+id/cbtos"
        android:checked="false"
        android:textColor="#fff"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:layout_below="@+id/rpwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:focusableInTouchMode="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"
        android:id="@+id/sgn_sbmt"
        android:background="#017681"
        android:capitalize="words"
        android:clickable="true"
        android:textColor="#fff"
        android:textSize="18sp"
        android:padding="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cbtos"
        android:layout_alignParentLeft="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_lgn_parky"
        android:id="@+id/lgn"
        android:background="#19a7ca"
        android:textColor="#fff"
        android:textSize="17sp"
        android:singleLine="true"
        android:capitalize="none"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sgn_sbmt"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/rpwd"
        android:visibility="visible"
        android:padding="15dp"
        android:background="#fff"
        android:hint="Re-type Password"
        android:layout_below="@+id/pwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
